--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -9,9 +9,17 @@ metadata:
     # ADD ANNOTATION
     nginx.ingress.kubernetes.io/rewrite-target: /$1
     # UPDATE ANNOTATION
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
+    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
 spec:
+  tls:
+    - hosts:
+        - counterfeitcrisis.com
+        - www.counterfeitcrisis.com
+      secretName: counterfeitcrisis-com
   rules:
-    - http:
+    - host: counterfeitcrisis.com
+      http:
         paths:
           - path: /?(.*)
             # UPDATE PATH
@@ -33,3 +41,26 @@ spec:
                 name: server-cluster-ip-service
                 port:
                   number: 5000
+    - host: www.counterfeitcrisis.com
+      http:
+        paths:
+          - path: /?(.*)
+            # UPDATE PATH
+            pathType: Prefix
+            # ADD PATHTYPE
+            backend:
+              service:
+                # UPDATE SERVICE FIELDS
+                name: client-cluster-ip-service
+                port:
+                  number: 3000
+                  - path: /api/?(.*)
+                    # UPDATE PATH
+                    pathType: Prefix
+                    # ADD PATHTYPE
+                    backend:
+                      service:
+                        # UPDATE SERVICE FIELDS
+                        name: server-cluster-ip-service
+                        port:
+                          number: 5000
